<resources>
  <string name="app_name">VSCP App</string>
  <string name="title">VSCP</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->

  <string name="timer">Poker Timer</string>
  <string name="tournament">Tournament</string>
  <string name="vscp">Very Swiss Championship Poker</string>
  <string name="action_exit">Quit app</string>
  <string name="action_webpage">VSCP website</string>
  <string name="title_activity_setting_timer">SettingTimerActivity</string>
  <string name="btn_desc_prev_blind">button to jump back to previous blind</string>
  <string name="img_desc_placeholder">placeholder_img</string>
  <string name="btn_desc_next_blind">button to jump forward to next blind</string>
  <string name="btn_desc_blind_config">Configure blind levels</string>

  <!-- Preference Titles -->
  <string name="common_header">Common</string>
  <string name="sound_header">Notifications</string>

  <!-- Common Preferences -->
  <string name="minute_per_round">Round Minutes</string>
  <string name="minute_per_warning">Warning Minutes</string>

  <!-- Blind Levels Preferences -->
  <string name="settings_notification_android">Manage notifications</string>
  <string name="sound_next_round">Sound Preference</string>
  <string name="sound_warning">One Minute Warning</string>
  <string name="rounds_definition">Blind Levels (rounds)</string>

  <!-- round settings row -->
  <string name="round_id">Round %s</string>
  <string name="duplicate_blind_value">Duplicate blind value</string>
  <string name="round_small_big_text">/</string>
  <string name="round_remove_last_blind_button_desc">button to remove last round definition</string>
  <string name="round_add_blind_button_desc">button_to_add_further_round_definition</string>
  <string name="round_increase_button_desc">Increase blind setting</string>
  <string name="round_derease_button_desc">Decrease blind setting</string>


  <string name="channel_name">TimerNotifications</string>
  <string name="channel_description">notify the user when level changes</string>
  <string name="foreground_channel_name">TimerService</string>
  <string name="foreground_channel_description">silent notification keeping the timer running in background</string>
  <string name="foreground_notification_text">Timer is running</string>

</resources>