<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      app:title="@string/common_header">

    <EditTextPreference
        app:key="min_per_round"
        app:defaultValue="12"
        app:title="@string/minute_per_round"
        app:useSimpleSummaryProvider="true"/>

    <EditTextPreference
        app:key="min_per_warning"
        app:defaultValue="1"
        app:title="@string/minute_per_warning"
        app:useSimpleSummaryProvider="true"/>

    <PreferenceScreen
        app:key="round_definition"
        app:title="@string/rounds_definition"
    />

  </PreferenceCategory>

  <PreferenceCategory
      app:title="@string/sound_header">

    <CheckBoxPreference
        app:key="sound_enabled"
        app:title="Enable sound"
        app:useSimpleSummaryProvider="true"/>

    <com.github.arburk.vscp.app.settings.NotificationSoundPreference
        app:key="sound_next_round"
        app:title="@string/sound_next_round"
        app:summary="Select a sound played when next round starts"/>

    <com.github.arburk.vscp.app.settings.NotificationSoundPreference
        app:key="sound_warning_of_next_round"
        app:title="@string/sound_warning"
        app:summary="Select a sound played as warning for next round"/>

  </PreferenceCategory>

</PreferenceScreen>