<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center_vertical"
              android:minHeight="@dimen/round_row_min_height"
              android:paddingTop="@dimen/round_row_vertical_padding"
              android:paddingBottom="@dimen/round_row_vertical_padding">

  <TextView
      android:id="@+id/round_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:textAlignment="textEnd"
      android:textSize="@dimen/round_row_text_size"
      android:maxLines="1"
      android:ellipsize="end"/>

  <ImageButton
      android:id="@+id/derease_button"
      android:src="@drawable/minus"
      android:scaleType="fitCenter"
      android:layout_width="@dimen/round_row_icon_size"
      android:layout_height="@dimen/round_row_icon_size"
      android:layout_marginStart="@dimen/round_row_icon_margin"
      android:padding="4dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/round_derease_button_desc"/>

  <EditText
      android:id="@+id/small_blind"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:layout_marginStart="@dimen/round_row_icon_margin"
      android:textAlignment="center"
      android:textSize="@dimen/round_row_text_size"
      android:inputType="number"
      android:maxLength="4"
      android:ems="4"/>

  <TextView
      android:id="@+id/small_big_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="4dp"
      android:paddingEnd="4dp"
      android:textSize="@dimen/round_row_text_size"
      android:textAlignment="center"
      android:text="@string/round_small_big_text"
      android:textStyle="bold"/>

  <TextView
      android:id="@+id/big_blind"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:textSize="@dimen/round_row_text_size"
      android:textAlignment="center"
      android:maxLines="1"
      android:ellipsize="end"
      android:textStyle="bold" />

  <ImageButton
      android:id="@+id/inrease_button"
      android:src="@drawable/plus"
      android:scaleType="fitCenter"
      android:layout_width="@dimen/round_row_icon_size"
      android:layout_height="@dimen/round_row_icon_size"
      android:layout_marginStart="@dimen/round_row_icon_margin"
      android:layout_marginEnd="@dimen/round_row_icon_margin"
      android:padding="4dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/round_increase_button_desc"/>

</LinearLayout>
